# pokemon-TCG-telegram-bot

./: .gitignore  .gitmodules  README.md  backfill_card_embeddings.py  bot.db  bot.db-shm  bot.db-wal  db.py  pyproject.toml  seed_plain_cards.py  storage.py  telegrambot.py
